[package]
name = "serde_json_placeholders"
version = "0.9.0"
edition = "2021"
description = "A simple library to replace placeholders in JSON strings."
license = "Apache-2.0"
repository = "https://github.com/sensorial-systems/serde_json_placeholders"
readme = "README.md"
keywords = ["serde", "json", "placeholders"]
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
documentation = "https://docs.rs/serde_json_placeholders"
homepage = "https://sensorial.systems"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1.5"