[package]
name = "json-template"
version = "0.9.4"
edition = "2021"
description = "A simple library for creating JSON templates."
license = "Apache-2.0"
repository = "https://github.com/sensorial-systems/json-template"
readme = "README.md"
keywords = ["serde", "json", "template"]
authors = ["Danilo Guanabara <danilo@sensorial.systems>"]
documentation = "https://docs.rs/json-template"
homepage = "https://sensorial.systems"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }